--- a/index.html
+++ b/index.html
@@ -5,25 +5,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 5</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="nav">
-        <ul>
-            <li>HOMES FOR SALE</li>
-            <li>HOMES FOR RENT</li>
-            <li>LAND FOR SALE</li>
-            <li>NEW CONSTRUCTION</li>
-            <li>REAL ESTATE INFO</li>
-            <li>BUILDERS</li>
-            <li>TOWNS</li>
-            <li>ADVERTISING</li>
-            <li>ABOUT VINCE</li>
-            <li>CONTACT</li>
-        </ul>
-    </div>
+    <header>
+
+        <nav class="navbar">
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">MY LISTINGS</a>
+                    <ul>
+                        <li><a href="#">SALES</a></li>
+                        <li><a href="#">RENTALS</a></li>
+                        <li><a href="#">Open Houses</a></li>
+                        <li><a href="#">RECENTLY SOLD</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">MY PROFILE</a></li>
+                <li><a href="#">PROPERTY SEARCH</a>
+                    <ul>
+                        <li><a href="#">SALES</a></li>
+                        <li><a href="#">RENTALS</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">OUE APPROACH</a>
+                    <ul>
+                        <li><a href="#">ABOUT THE SAUNDERS BRAND</a></li>
+                        <li><a href="#">SAUNDERS SALES BOOK</a></li>
+                        <li><a href="#">HAMPTONS DEVELOPERS</a></li>
+                        <li><a href="#">HAPPENING IN THE HAMPTONS</a></li>
+                        <li><a href="#">THE SAUNDERS TEAM</a></li>
+                        <li><a href="#">SAUNDERS OFFICES</a></li>
+                        <li><a href="#">RECENT AWARDS</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">MARKET INTELLIGENCE</a></li>
+                <li><a href="#">MORE</a></li>
+            </ul>
+        </nav>
+    </header>
 
 </body>
 
